--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,17 @@
   pointer-events: none;
 }
 
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -18,10 +26,6 @@
 
 .App-link {
   color: #61dafb;
-}
-
-.d-none {
-  display: none;
 }
 
 @keyframes App-logo-spin {
